# SaltAI

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
modules/: convert.py  log.py  masking.py  node_importer.py  sanitize.py  types.py  utility.py
modules/animation/: image_animator.py
nodes/: README.md  salt_custom_nodes.md
nodes/SaltAI-Animation-Keyframing/: nodes.py
nodes/SaltAI-Animation-Keyframing/modules/: transform.py  utils.py
nodes/SaltAI-Llama-Index/: __init__.py  nodes_core.py  nodes_tools.py  requirements.txt
nodes/SaltAI-OPAC-ComfyUI/: nodes.py
nodes/SaltAI-OPAC-ComfyUI/modules/: transform.py
nodes/api/: stability_ai.py
nodes/image/: image_processing.py  loaders.py  website_screenshot.py
nodes/io/: input_output.py
nodes/masking/: clipseg.py  cropping.py  mask_convert.py  mask_filters.py
nodes/string/: processing.py
nodes/utility/: convert.py  displayany.py
web/: SaltInput.js  display_any.js  helpbutton.js  info_table.csv  salt_input.js
