[tool.poetry]
name = "SaltAI"
version = "0.0.1"
description = "Salt nodes for ComfyUI."
authors = ["WAS-PlaiLabs <jordan.thompson@plailabs.com>"]
license = "General Public License"

[tool.poetry.dependencies]
python = "^3.10"
imageio-ffmpeg = "^0.4.9"
pillow = "10.2.0"
python-color-transfer = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Exclude specific patterns from the package
exclude = ["marinade/**/*", "__pycache__/**/*"]
